--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li class="box alternativa4">Frango</li>
         </ul>
         <button class="box" id="btnPerguntar">Pode perguntar?</button>
+        <div class="pontuacao"><span>0</span> REAIS</div>
     </section>
 </body>
 
