--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
             <li class="box alternativa4">Frango</li>
         </ul>
         <button class="box" id="btnPerguntar">Pode perguntar?</button>
-        <div class="pontuacao"><span>0</span> REAIS</div>
+        <div class="pontuacao">
+            <div class="box errar"></div>
+            <div class="box parar"></div>
+            <div class="box acertar"></div>
+        </div>
+        <div class="pontuacaoLabel">
+            <div>ERRAR</div>
+            <div>PARAR</div>
+            <div>ACERTAR</div>
+        </div>
     </section>
 </body>
 
